Fix theme column header alignment with min-height

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -558,6 +558,9 @@ body {
         margin-bottom: 20px;
         padding-bottom: 10px;
         border-bottom: 3px solid $ember-orange;
+        min-height: 3.5em;
+        display: flex;
+        align-items: flex-end;
     }
 }
 
